# botvideo

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  alembic.ini  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile
backend/app/: main.py
configs/: README.md
database/: schema.sql  seed.sql
database/alembic/: env.py
deploy/certbot/: init-letsencrypt.sh  renew.sh
deploy/monitoring/: README.md
deploy/nginx/: nginx.conf
deploy/railway/: README.md  railway.api.json  railway.telegram.json  railway.worker.json
deploy/runpod/: README.md  env.example
deploy/scripts/: backup.sh  restore.sh
deploy/systemd/: ai-youtube-factory.service
deploy/vast/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INSTALL.md  ROADMAP.md
factory/: __init__.py
factory/agents/: __init__.py  llm.py  orchestrator.py  scene_agent.py  schema.py  script_agent.py  seo_agent.py  visual_agent.py  voice_agent.py
factory/core/: __init__.py  config.py  logging.py  security.py
factory/db/: __init__.py  base.py  models.py  session.py
factory/prompts/: __init__.py  script.py  seo.py
factory/render/: __init__.py  captions.py  ffmpeg.py  pipeline.py
factory/schemas/: __init__.py  jobs.py
factory/services/: jobs.py  notify.py  queue.py
factory/storage/: __init__.py  base.py  local.py  s3.py  supabase_store.py
frontend/: README.md
scripts/: make_long_video.py  make_video.py
telegram_bot/: Dockerfile  bot.py  requirements.txt  service.py
telegram_bot/core/: startup.py
telegram_bot/data/: categories.json
telegram_bot/db/: __init__.py  ai_generator_models.py  automation_models.py  channel_models.py  integration_models.py  material_models.py  models.py  project_models.py  repository.py  session.py  trend_models.py
telegram_bot/handlers/: __init__.py  admin.py  errors.py  user.py
telegram_bot/keyboards/: main_menu.py  navigation.py
telegram_bot/middlewares/: auth.py  logging.py
telegram_bot/routers/: __init__.py  ai_generator.py  (+19 more)
worker/: Dockerfile  Dockerfile.gpu  celery_app.py  tasks.py
(+76 files in other folders)
